--- a/src/lambda-functions/staff/staff.yaml
+++ b/src/lambda-functions/staff/staff.yaml
@@ -122,5 +122,5 @@ Resources:
       CodeUri: auto-confirm-user
       Handler: app.lambda_handler
       Runtime: python3.8
-      Policies:
-        - CognitoPowerUser # Hoặc policy cụ thể hơn nếu cần
+      # Policies:
+      #   - CognitoPowerUser # Hoặc policy cụ thể hơn nếu cần
