--- a/src/integrated-resource/appointment.yaml
+++ b/src/integrated-resource/appointment.yaml
@@ -84,6 +84,7 @@ Resources:
                         "reason": {"S": "$input.path('$.appointment.reason')"},
                         "doctor": {"S": "$input.path('$.appointment.doctor')"},
                         "time": {"N": "$input.path('$.appointment.time')"},
+                        "patient_created_date": {"S": "$input.path('$.appointment.patient_created_date')"},
                         "status": {"N": "$input.path('$.appointment.status')"},
                         "migrated": {"BOOL": false}
                       }
@@ -154,7 +155,7 @@ Resources:
               method.response.header.Access-Control-Allow-Methods: "'GET'"
             ResponseTemplates:
               application/json: |
-                #set($inputRoot = $input.path('$'))[#foreach($item in $inputRoot.Items)#set($grouped = {})#set($counts = {})#foreach($key in $item.keySet())#if($key != "type" && $key != "epoch")#if(!$grouped.containsKey($util.escapeJavaScript($item[$key].M.procedure_id.S)))#set($grouped[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = [])#set($counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = 0)#end#set($appointment = {"appointment_id": "$key","patient_id": "$util.escapeJavaScript($item[$key].M.patient_id.S)","patient_name":"$util.escapeJavaScript($item[$key].M.patient_name.S)","phone_number": "$util.escapeJavaScript($item[$key].M.phone_number.S)","procedure_id": "$util.escapeJavaScript($item[$key].M.procedure_id.S)","procedure_name": "$util.escapeJavaScript($item[$key].M.procedure_name.S)","doctor": "$util.escapeJavaScript($item[$key].M.doctor.S)","time": $item[$key].M.time.N,"status": $item[$key].M.status.N,"attribute_name": "$util.escapeJavaScript($item[$key].M.attribute_name.S)","epoch": $item[$key].M.epoch.N,"migrated": $item[$key].M.migrated.BOOL})#set($discard = $grouped[$util.escapeJavaScript($item[$key].M.procedure_id.S)].add($appointment))#set($counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = $counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] + 1)#end#end{"date": $item.epoch.N,"appointments": [#foreach($procKey in $grouped.keySet()){"procedure_id": "$procKey","count": $counts[$procKey],"details": $grouped[$procKey]}#if($foreach.hasNext),#end#end]}#if($foreach.hasNext),#end#end]
+                #set($inputRoot = $input.path('$'))[#foreach($item in $inputRoot.Items)#set($grouped = {})#set($counts = {})#foreach($key in $item.keySet())#if($key != "type" && $key != "epoch")#if(!$grouped.containsKey($util.escapeJavaScript($item[$key].M.procedure_id.S)))#set($grouped[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = [])#set($counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = 0)#end#set($appointment = {"appointment_id": "$key","patient_id": "$util.escapeJavaScript($item[$key].M.patient_id.S)","patient_name":"$util.escapeJavaScript($item[$key].M.patient_name.S)","phone_number": "$util.escapeJavaScript($item[$key].M.phone_number.S)","procedure_id": "$util.escapeJavaScript($item[$key].M.procedure_id.S)","procedure_name": "$util.escapeJavaScript($item[$key].M.procedure_name.S)","reason": "$util.escapeJavaScript($item[$key].M.reason.S)","doctor": "$util.escapeJavaScript($item[$key].M.doctor.S)","time": $item[$key].M.time.N,"patient_created_date":"$util.escapeJavaScript($item[$key].M.patient_created_date.S)","status": $item[$key].M.status.N,"attribute_name": "$util.escapeJavaScript($item[$key].M.attribute_name.S)","epoch": $item[$key].M.epoch.N,"migrated": $item[$key].M.migrated.BOOL})#set($discard = $grouped[$util.escapeJavaScript($item[$key].M.procedure_id.S)].add($appointment))#set($counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] = $counts[$util.escapeJavaScript($item[$key].M.procedure_id.S)] + 1)#end#end{"date": $item.epoch.N,"appointments": [#foreach($procKey in $grouped.keySet()){"procedure_id": "$procKey","count": $counts[$procKey],"details": $grouped[$procKey]}#if($foreach.hasNext),#end#end]}#if($foreach.hasNext),#end#end]
           - StatusCode: "400"
             SelectionPattern: '4\d{2}'
             ResponseTemplates:
@@ -228,6 +229,7 @@ Resources:
                               "reason": {"S": "$input.path('$.appointment.reason')"},
                               "doctor": {"S": "$input.path('$.appointment.doctor')"},
                               "time": {"N": "$input.path('$.appointment.time')"},
+                              "patient_created_date": {"S": "$input.path('$.appointment.patient_created_date')"},
                               "status": {"N": "$input.path('$.appointment.status')"},
                               "migrated": {"BOOL": false}
                             }
@@ -262,6 +264,7 @@ Resources:
                               "reason": {"S": "$input.path('$.appointment.reason')"},
                               "doctor": {"S": "$input.path('$.appointment.doctor')"},
                               "time": {"N": "$input.path('$.appointment.time')"},
+                              "patient_created_date": {"S": "$input.path('$.appointment.patient_created_date')"},
                               "status": {"N": "$input.path('$.appointment.status')"},
                               "migrated": {"BOOL": false}
                             }
