--- a/src/template.yaml
+++ b/src/template.yaml
@@ -66,6 +66,7 @@ Resources:
         AppName: !Sub ${AppName}
         UserPoolArn: !GetAtt InfrastructureStack.Outputs.CognitoUserPoolArn
         UserPoolId: !GetAtt InfrastructureStack.Outputs.CognitoUserPoolId
+        UserPoolClientId: !GetAtt InfrastructureStack.Outputs.UserPoolClientId
         DBHost: !Ref DBHost
         Database: !Ref Database
         Username: !Ref DBUsername
